basic rules and data types

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>30DaysOfScript:Inline Script</title>
   </head>
   <body>
-    <button onclick="alert('Welcome to 30DaysOfJavaScript!')">Click Me</button>
+    <!-- <button onclick="alert('Welcome to 30DaysOfJS')";>Click me!</button>
+    <script>
+        console.log('Welcome to 30DaysOfJS')
+    </script> -->
+    <script src="introduction.js"></script>
   </body>
 </html>
