--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>30DaysOfScript:Inline Script</title>
+    <title>30DaysOfScript</title>
   </head>
   <body>
     <!-- <button onclick="alert('Welcome to 30DaysOfJS')";>Click me!</button>
     <script>
         console.log('Welcome to 30DaysOfJS')
     </script> -->
-    <script src="introduction.js"></script>
+    <script src="day2Exercises.js"></script>
   </body>
 </html>
